Bug 68581 - Incorrect import of multiline cells from ODS
Summary: Incorrect import of multiline cells from ODS
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.1.2 release
Hardware: Other All
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.2.0 target:4.1.2
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-26 19:25 UTC by Kohei Yoshida
Modified: 2013-08-27 13:38 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kohei Yoshida 2013-08-26 19:25:46 UTC
1. Create a new spreadsheet document.

2. Enter in cell B2:

   'one'
   'two'
   'three'

   as multi-line content.

3. Enter in cell B4:

   ''
   'bah'

    as multi-line content. Note that the first line should be empty.

4. Save the document to ODS, then reload it.  The content of B4 becomes

   'three'
   'bah'

which is wrong.
Comment 1 Kohei Yoshida 2013-08-26 19:26:01 UTC
Confirming.
Comment 2 Kohei Yoshida 2013-08-26 19:26:19 UTC
I have a fix.
Comment 3 Commit Notification 2013-08-26 19:38:54 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=969d5a3b97903fe32b3a7da0c3de8bf86f323c17

fdo#68581: The first paragraph text can be legitimately empty.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2013-08-27 13:37:21 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=df2c34045d753fc80484f7d7f128ec5e8b52ffc7&h=libreoffice-4-1

fdo#68581: The first paragraph text can be legitimately empty.


It will be available in LibreOffice 4.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Kohei Yoshida 2013-08-27 13:38:38 UTC
Ok.  This will be fixed in 4.1.2.