fdo#68581: The first paragraph text can be legitimately empty.

Change-Id: I2309a0c6aebc8a111e67e2e3d591cbabfbbadfb4
(cherry picked from commit 969d5a3b97903fe32b3a7da0c3de8bf86f323c17)